--- a/IWebElement/IWebElement.csproj
+++ b/IWebElement/IWebElement.csproj
@@ -11,6 +11,9 @@
     <Company>Swiss Life AG</Company>
     <Authors>Andreas Karz</Authors>
     <RepositoryType>GIT</RepositoryType>
+    <PackageIconUrl>https://raw.githubusercontent.com/AndreasKarz/FunkyBDD.SxS.Selenium.WebElement/master/icon.png</PackageIconUrl>
+    <PackageProjectUrl>https://raw.githubusercontent.com/AndreasKarz/FunkyBDD.SxS.Selenium.WebElement</PackageProjectUrl>
+    <RepositoryUrl>https://raw.githubusercontent.com/AndreasKarz/FunkyBDD.SxS.Selenium.WebElement</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
