--- a/IWebElement/IWebElement.csproj
+++ b/IWebElement/IWebElement.csproj
@@ -20,9 +20,19 @@
     <PackageTags>selenium iwebelement bdd pom apom testing extension automated sxs</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageReleaseNotes>Init</PackageReleaseNotes>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="packages\**" />
+    <EmbeddedResource Remove="packages\**" />
+    <None Remove="packages\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
