--- a/IWebElement/IWebElement.csproj
+++ b/IWebElement/IWebElement.csproj
@@ -7,7 +7,7 @@
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>FunkyBDD.SxS.Selenium.WebElement</PackageId>
-    <Description>Extensions for the Selenium IWebElement. Integrates properties and methods that are always needed. Supports the POM and APOM principles.</Description>
+    <Description>Extensions for the Selenium IWebElement. Integrates properties and methods that are always needed.</Description>
     <Company>Swiss Life AG</Company>
     <Authors>Andreas Karz</Authors>
     <RepositoryType>GIT</RepositoryType>
@@ -19,10 +19,10 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>selenium iwebelement bdd pom apom testing extension automated sxs</PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
-    <PackageReleaseNotes>Init</PackageReleaseNotes>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <Version>2.0.0</Version>
+    <PackageReleaseNotes>Small fixes</PackageReleaseNotes>
+    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <FileVersion>2.0.1.0</FileVersion>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
